--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,14 +1,34 @@
-.bg-image{ 
+.hero-image{
+  position: relative;
+  width: 100%;
+  height: 100vh;
   background: url('https://images.unsplash.com/photo-1521020814872-f1ead927ef95?ixlib=rb-0.3.5&s=9ebb1ff86cdfaa213b1ab82c157006f0&auto=format&fit=crop&w=2500&q=80');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   opacity: 0.8;
+
 }
 
-.hero{
+.hero-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: #fff;
-  text-align: center;
   text-transform: uppercase;
   text-shadow: 0px 0px 10px rgba(0,0,0,.75);
+}
+
+.hero-text > .h1 {
+  font-size: 100px;
+}
+
+.hero-text > p {
+  font-size: 24px;
+  
+}
+
+.btn.btn-info{
+  border-radius: 0;
 }
